claude compatible http endpoint is available